--- a/pages/build.html
+++ b/pages/build.html
@@ -118,6 +118,6 @@
 
     <script type="module" src="/index.js"></script> <!-- imports css-->
     <script type="module" src="/js/builder.js"></script> <!-- makes builder work -->
-    <script src="/js/sidebar.js"></script> <!-- makes sidebar work -->
+    <script src="/js/sidebar.js"></script> 
 </body>
 </html>
