--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
       </div>
     </footer>
 
-    <script type="module" src="index.js"></script> <!-- imports css -->
-    <script type="module" src="js/main.js"></script> <!-- builds 3d -->
-    <script src="js/sidebar.js"></script> <!-- makes sidebar work -->
+    <script type="module" src="/index.js"></script> <!-- imports css -->
+    <script type="module" src="/js/main.js"></script> <!-- builds 3d -->
+    <script src="/js/sidebar.js"></script>
   </body>
 </html>
