moved sidebar func

--- a/pages/build.html
+++ b/pages/build.html
@@ -14,7 +14,7 @@
         <div class="modal-container">
             <svg class="clickable" id="close-thanks" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             <h2>Thanks for ordering!</h2>
-            <p>Your total is <span id="price">$$$</span></p>
+            <p>Your total is <span id="price">$ 9.99</span></p>
             <a href="/build" class="button">Go to check-out</a>
         </div>
     </section>
@@ -41,20 +41,18 @@
         <!-- Links for bigger screens -->
         <div class="header-links">
             <a href="/">Home</a> •
-            <a href="/pages/build.html">Build</a> •
-            <a href="/">About & Where to find</a>
+            <a href="/pages/build.html">Build</a>
         </div>
 
         <!-- Sidebar for smaller screens-->
         <div class="sidebar-container">
-            <div onclick="toggleSidebar()" class="clickable">
+            <div class="clickable toggleSidebar">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M3 15h18v-2H3v2zm0 4h18v-2H3v2zm0-8h18V9H3v2zm0-6v2h18V5H3z"/></svg>
             </div>
             <ul class="sidebar" id="sidebar">
             <li><a href="/">Home</a></li>
             <li><a href="/">Order</a></li>
-            <li><a href="/">About & Where to find</a></li>
-            <li onclick="toggleSidebar()" class="clickable">
+            <li class="clickable toggleSidebar">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             </li>
             </ul>
@@ -80,8 +78,6 @@
         <div class="order-container">
             <button id="order" class="big button" >Order</button>
         </div>
-        
-        
     </main>
 
     <!-----------------  FOOTER  -------------------------->
@@ -99,7 +95,6 @@
         <div class="links-footer">
         <p><a href="/">Home</a></p>
         <p><a href="/pages/build.html">Build</a></p>
-        <p><a href="/">About & Where to find</a></p>
         </div>
 
         <!-- Social media links -->
@@ -118,6 +113,5 @@
 
     <script type="module" src="/index.js"></script> <!-- imports css-->
     <script type="module" src="/js/builder.js"></script> <!-- makes builder work -->
-    <script src="/js/sidebar.js"></script> 
 </body>
 </html>
