trying another href

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Logo -->
         <div class="logo-container">
           <h1>
-            <a href="/index.html">
+            <a href="/">
             Build-a-Burger <!-- TODO: Picture -->
           </a>
         </h1>
@@ -21,7 +21,7 @@
       
         <!-- Links for bigger screens -->
         <div class="header-links">
-          <a href="/index.html">Home</a> •
+          <a href="/">Home</a> •
           <a href="/pages/build">Build</a>
         </div>
 
@@ -31,8 +31,8 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M3 15h18v-2H3v2zm0 4h18v-2H3v2zm0-8h18V9H3v2zm0-6v2h18V5H3z"/></svg>
           </div>
           <ul class="sidebar" id="sidebar">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/pages/index.html">Build</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/pages/build/">Build</a></li>
             <li class="toggleSidebar clickable">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             </li>
@@ -47,7 +47,7 @@
         <canvas id="canvas" class="clickable">
           <!-- Three js -->
         </canvas>
-        <a href="/pages/index.html" class="button"> Order now! </a>
+        <a href="/pages/build/" class="button"> Order now! </a>
       </div>
 
       <!-- How it works section -->
@@ -77,7 +77,7 @@
       <!-- Logo -->
       <div class="logo-container">
         <h3>
-          <a href="/index.html">
+          <a href="/">
             Build-a-Burger <!-- TODO: Picture -->
           </a>
         </h3>
@@ -86,7 +86,7 @@
       <!-- Same links as header -->
       <div class="links-footer">
         <p><a href="/">Home</a></p>
-        <p><a href="/pages/index.html">Build</a></p>
+        <p><a href="/pages/build/">Build</a></p>
       </div>
 
       <!-- Social media links -->
