--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
       </div>
     </footer>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
