--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="fastfood_white_24dp.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/icons/fastfood_white_24dp.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Build a Burger</title>
   </head>
