--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
       </div>
     </footer>
 
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
+    <script type="module">
+      import './style.css';
+      console.log('imported css');
+    </script>
   </body>
 </html>
