--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Links for bigger screens -->
         <div class="header-links">
           <a href="/">Home</a> •
-          <a href="/pages/build">Build</a>
+          <a href="/pages/build/">Build</a>
         </div>
 
         <!-- Sidebar for smaller screens-->
@@ -103,6 +103,6 @@
       </div>
     </footer>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
