here comes more tries

--- a/build.html
+++ b/build.html
@@ -15,7 +15,7 @@
             <svg class="clickable" id="close-thanks" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             <h2>Thanks for ordering!</h2>
             <p>Your total is <span id="price">$ 9.99</span></p>
-            <a href="/pages/build/" class="button">Go to check-out</a>
+            <a href="/build.html" class="button">Go to check-out</a>
         </div>
     </section>
     <section id="error-modal" class="modal">
@@ -41,7 +41,7 @@
         <!-- Links for bigger screens -->
         <div class="header-links">
             <a href="/">Home</a> •
-            <a href="/pages/build/">Build</a>
+            <a href="/build.html">Build</a>
         </div>
 
         <!-- Sidebar for smaller screens-->
@@ -51,7 +51,7 @@
             </div>
             <ul class="sidebar" id="sidebar">
             <li><a href="/">Home</a></li>
-            <li><a href="/pages/build/">Build</a></li>
+            <li><a href="/build.html">Build</a></li>
             <li class="clickable toggleSidebar">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             </li>
@@ -94,7 +94,7 @@
         <!-- Same links as header -->
         <div class="links-footer">
         <p><a href="/">Home</a></p>
-        <p><a href="/pages/build/">Build</a></p>
+        <p><a href="/build.html">Build</a></p>
         </div>
 
         <!-- Social media links -->
@@ -111,6 +111,6 @@
         </div>
     </footer>
 
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="/build.js"></script>
 </body>
 </html>
