--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="assets/icons/fastfood_white_24dp.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/css/style.css">
+
     <title>Build a Burger</title>
   </head>
   <body>
@@ -22,7 +25,7 @@
         <!-- Links for bigger screens -->
         <div class="header-links">
           <a href="/">Home</a> •
-          <a href="/pages/build/">Build</a>
+          <a href="/build.html">Build</a>
         </div>
 
         <!-- Sidebar for smaller screens-->
@@ -32,7 +35,7 @@
           </div>
           <ul class="sidebar" id="sidebar">
             <li><a href="/">Home</a></li>
-            <li><a href="/pages/build/">Build</a></li>
+            <li><a href="/build.html">Build</a></li>
             <li class="toggleSidebar clickable">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             </li>
@@ -47,7 +50,7 @@
         <canvas id="canvas" class="clickable">
           <!-- Three js -->
         </canvas>
-        <a href="/pages/build/" class="button"> Order now! </a>
+        <a href="/build.html" class="button"> Order now! </a>
       </div>
 
       <!-- How it works section -->
@@ -86,7 +89,7 @@
       <!-- Same links as header -->
       <div class="links-footer">
         <p><a href="/">Home</a></p>
-        <p><a href="/pages/build/">Build</a></p>
+        <p><a href="/build.html">Build</a></p>
       </div>
 
       <!-- Social media links -->
@@ -103,6 +106,6 @@
       </div>
     </footer>
 
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
