--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
   </head>
   <body>
 
+      <!-----------------  MODALS  -------------------------->
+      <section id="thanks-modal" class="modal">
+        <div class="modal-container">
+            <svg class="clickable" id="close-thanks" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
+            <h2>Thanks for ordering!</h2>
+            <p>Your total is <span id="price">$ 9.99</span></p>
+            <a href="/build-page" class="button">Go to check-out</a>
+        </div>
+    </section>
+    <section id="error-modal" class="modal">
+        <div class="modal-container">
+            <svg class="clickable" id="close-error" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
+            <h2>Error!</h2>
+            <p>Your burger needs more ingredients</p>
+            <span id="back-error" class="button clickable">Go back</span>
+        </div>
+    </section>
+
     <!-----------------  HEADER  -------------------------->
     <header>
         <!-- Logo -->
@@ -47,7 +65,7 @@
     <main>
       <!-- Home with 3d model with threejs -->
       <div class="home-container">
-        <canvas id="canvas" class="clickable">
+        <canvas id="main-canvas" class="clickable">
           <!-- Three js -->
         </canvas>
         <a href="/build-page/" class="button"> Order now! </a>
@@ -73,6 +91,28 @@
         </p>
 
       </div>
+
+      <div class="builder-main">
+          <div class="builder-container">
+            <canvas id="builder-canvas">
+              
+            </canvas>
+          </div>
+
+          <div class="buttons-container">
+            <button class="button" id="burger-button">Burger</button>
+            <button class="button" id="cheese-button">Cheese</button>
+            <button class="button" id="lettuce-button">Lettuce</button>
+            <button class="button" id="tomatos-button">Tomatos</button>
+          </div>
+          
+          <div class="restart-container">
+            <button id="restart" class="big button">Restart</button>
+          </div>
+          <div class="order-container">
+            <button id="order" class="big button" >Order</button>
+          </div>
+        </div>
     </main>
 
     <!-----------------  FOOTER  -------------------------->
