--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <svg class="clickable" id="close-thanks" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             <h2>Thanks for ordering!</h2>
             <p>Your total is <span id="price">$ 9.99</span></p>
-            <a href="/build-page" class="button">Go to check-out</a>
+            <a href="#builder-canvas" class="button">Go to check-out</a>
         </div>
     </section>
     <section id="error-modal" class="modal">
@@ -35,7 +35,7 @@
         <div class="logo-container">
           <h1>
             <a href="/">
-            Build-a-Burger <!-- TODO: Picture -->
+            Build-a-Burger
           </a>
         </h1>
       </div>
@@ -43,7 +43,7 @@
         <!-- Links for bigger screens -->
         <div class="header-links">
           <a href="/">Home</a> •
-          <a href="/build-page/">Build</a>
+          <a href="#builder-canvas/">Build</a>
         </div>
 
         <!-- Sidebar for smaller screens-->
@@ -53,7 +53,7 @@
           </div>
           <ul class="sidebar" id="sidebar">
             <li><a href="/">Home</a></li>
-            <li><a href="/build-page/">Build</a></li>
+            <li><a href="#builder-canvas/">Build</a></li>
             <li class="toggleSidebar clickable">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="35px" width="35px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
             </li>
@@ -68,7 +68,7 @@
         <canvas id="main-canvas" class="clickable">
           <!-- Three js -->
         </canvas>
-        <a href="/build-page/" class="button"> Order now! </a>
+        <a href="#builder-canvas/" class="button"> Order now! </a>
       </div>
 
       <!-- How it works section -->
@@ -105,7 +105,7 @@
             <button class="button" id="lettuce-button">Lettuce</button>
             <button class="button" id="tomatos-button">Tomatos</button>
           </div>
-          
+
           <div class="restart-container">
             <button id="restart" class="big button">Restart</button>
           </div>
@@ -129,7 +129,7 @@
       <!-- Same links as header -->
       <div class="links-footer">
         <p><a href="/">Home</a></p>
-        <p><a href="/build-page/">Build</a></p>
+        <p><a href="#builder-canvas/">Build</a></p>
       </div>
 
       <!-- Social media links -->
@@ -145,6 +145,10 @@
           </a>
       </div>
     </footer>
+
+    <script src="three.js"></script>
+    <script type="module" src="GLTFLoader.js"></script>
+    <script type="module" src="OrbitControls.js"></script>
 
     <script type="module" src="./index.js"></script>
   </body>
